--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -20,6 +20,7 @@
     }
   ],
   "mac": {
+    "icon": "build/icon.png",
     "target": [
       "dmg",
       "zip"
@@ -27,6 +28,7 @@
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
   },
   "win": {
+    "icon": "build/icon.png",
     "target": [
       {
         "target": "nsis",
